# qpr-autofill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  e2e_runner.sh  pyproject.toml
.claude-plugin/: plugin.json
agents/: qpr-macro.md  qpr-sssg.md
docs/: E2E.md  PROMPT_NEXT_QUARTER.md
examples/: tickers.yaml  working_q1_2026.json
qpr/: __init__.py  __main__.py  brief.py  channel_memory.py  classify.py  cli.py  grade_e2e.py  sheets.py  tickers.py  verify.py
qpr/data/: channel_memory.json
qpr/templates/: sssg_brief.md
skills/qpr-research-rules/: SKILL.md
skills/qpr-sheets-api/: SKILL.md
skills/qpr-source-verification/: SKILL.md
skills/qpr-source-verification/scripts/: verify.sh
tests/: test_brief.py  test_channel_memory.py  test_classify.py  test_cli.py  test_grade_e2e.py  test_sheets.py  test_tickers.py  test_verify.py
tests/fixtures/: sample_page.html
