[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpr-autofill"
version = "0.1.0"
description = "Quarterly research auto-fill for SEA-5 macro and retail SSSG"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ACV Capital" }]
keywords = ["research", "macro", "sssg", "retail", "sea-5", "indonesia", "thailand", "philippines", "malaysia", "vietnam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "gspread>=6.0,<7",
    "google-auth>=2.27",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
qpr = "qpr.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qpr*"]

[tool.setuptools.package-data]
qpr = ["data/*.json", "templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
